compatibility-tests/compile-fail/tests/ui/attribute-misuse.stderr
error: `display` attribute is only valid on enum variants or structs with named fields, not on an enum
 --> tests/ui/attribute-misuse.rs:5:13
  |
5 |     #[snafu(display("display should not work here"))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(from)` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:6:13
  |
6 |     #[snafu(source(from(XXXX, Box::new)))]
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:7:13
  |
7 |     #[snafu(source(true))]
  |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on an enum
 --> tests/ui/attribute-misuse.rs:8:13
  |
8 |     #[snafu(backtrace)]
  |             ^^^^^^^^^

error: `context(bool)` attribute is only valid on enum variants or structs with named fields, not on an enum
 --> tests/ui/attribute-misuse.rs:9:13
  |
9 |     #[snafu(context)]
  |             ^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on an enum
  --> tests/ui/attribute-misuse.rs:10:13
   |
10 |     #[snafu(implicit)]
   |             ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on an enum
  --> tests/ui/attribute-misuse.rs:11:13
   |
11 |     #[snafu(provide)]
   |             ^^^^^^^

error: `provide(type => expression)` attribute is only valid on enum variants or structs with named fields, not on an enum
  --> tests/ui/attribute-misuse.rs:12:13
   |
12 |     #[snafu(provide(u8 => 0))]
   |             ^^^^^^^^^^^^^^^^

error: `source` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:24:46
   |
24 |         #[snafu(display("an error variant"), source(from(XXXX, Box::new)))]
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `source` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:25:17
   |
25 |         #[snafu(source)]
   |                 ^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:26:17
   |
26 |         #[snafu(backtrace)]
   |                 ^^^^^^^^^

error: `crate_root` attribute is only valid on an enum or a struct, not on an enum variant
  --> tests/ui/attribute-misuse.rs:27:17
   |
27 |         #[snafu(crate_root(XXXX))]
   |                 ^^^^^^^^^^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:28:17
   |
28 |         #[snafu(implicit)]
   |                 ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on an enum variant
  --> tests/ui/attribute-misuse.rs:29:17
   |
29 |         #[snafu(provide)]
   |                 ^^^^^^^

error: `display` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:40:21
   |
40 |             #[snafu(display("display should not work here"))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an enum, enum variants, or a struct with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:41:21
   |
41 |             #[snafu(visibility(pub))]
   |                     ^^^^^^^^^^^^^^^

error: Incompatible attributes [`source(false)`, `source(from)`] specified on a field
  --> tests/ui/attribute-misuse.rs:43:21
   |
43 |             #[snafu(source(from(XXXX, Box::new)))]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `context` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:44:21
   |
44 |             #[snafu(context)]
   |                     ^^^^^^^

error: `crate_root` attribute is only valid on an enum or a struct, not on a field
  --> tests/ui/attribute-misuse.rs:45:21
   |
45 |             #[snafu(crate_root(XXXX))]
   |                     ^^^^^^^^^^^^^^^^

error: `provide(false)` attribute is only valid on a field named "source" or "backtrace", not on other fields
  --> tests/ui/attribute-misuse.rs:48:21
   |
48 |             #[snafu(provide(false))]
   |                     ^^^^^^^^^^^^^^

error: `provide(type => expression)` attribute is only valid on enum variants or structs with named fields, not on a field
  --> tests/ui/attribute-misuse.rs:49:21
   |
49 |             #[snafu(provide(u8 => 0))]
   |                     ^^^^^^^^^^^^^^^^

error: `display` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:62:13
   |
62 |     #[snafu(display("display should not work here"))]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `visibility` attribute is only valid on an enum, enum variants, or a struct with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:64:13
   |
64 |     #[snafu(visibility(pub))]
   |             ^^^^^^^^^^^^^^^

error: `source(bool)` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:65:13
   |
65 |     #[snafu(source(true))]
   |             ^^^^^^^^^^^^

error: `backtrace` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:66:13
   |
66 |     #[snafu(backtrace)]
   |             ^^^^^^^^^

error: `context` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:67:13
   |
67 |     #[snafu(context)]
   |             ^^^^^^^

error: `implicit` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:68:13
   |
68 |     #[snafu(implicit)]
   |             ^^^^^^^^

error: `provide` attribute is only valid on enum variant or struct fields with a name, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:69:13
   |
69 |     #[snafu(provide)]
   |             ^^^^^^^

error: `provide(type => expression)` attribute is only valid on enum variants or structs with named fields, not on a tuple struct
  --> tests/ui/attribute-misuse.rs:70:13
   |
70 |     #[snafu(provide(u8 => 0))]
   |             ^^^^^^^^^^^^^^^^
